# playing-tg-bio

./: .env.example  .gitignore  Cargo.toml  README.md
src/: apple_music.rs  config.rs  main.rs  telegram.rs
src/spotify/: client.rs  mod.rs  token.rs
