[package]
name = "spotify-tg-bio"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
form_urlencoded = "1.2.1"
grammers-client = "0.7.0"
grammers-mtsender = "0.7.0"
grammers-session = "0.7.0"
grammers-tl-types = "0.7.0"
log = "0.4.22"
reqwest = { version = "0.12.7", features = ["json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
simplelog = "0.12.2"
tiny_http = "0.12.0"
tokio = { version = "1.40.0", features = ["full"] }
